# animation-engine

./: .eslintrc.js  .gitignore  CMakeLists.txt  CMakePresets.json  build-wasm-debug.bat  build-wasm.bat  build-wasm.mjs  index.html  package-lock.json  package.json  rollup.config.js  test.js  tsconfig.json
.deprecated/components/: modelComponent.ts
.deprecated/entities/: entity.ts
.deprecated/managers/: loaders.ts  render.ts
.deprecated/models/: animation.ts  texture-def.ts
.deprecated/surface-generation/biomes/: biomes.ts  chunk-generator.ts  consumer.ts  overworld-biome-builder.ts  surface-system.ts  terrain-shaper.ts  test.ts
.deprecated/surface-generation/biomes/noise/: improved-noise.ts  perlin-noise.ts  perlin-simplex-noise.ts
.deprecated/utils/: render-utils.ts
animation-engine/: animation-engine.cpp  animation-engine.sln  animation-engine.vcxproj  animation-engine.vcxproj.filters  native-main.cpp
src/: animation-processor.ts  index.ts  loaders.ts  model-loader.ts  render-utils.ts  render.ts
src/components/: component.ts  modelComponent.ts  phyicsComponent.ts  textureComponent.ts  transformComponent.ts
src/cpp/: engine.cpp  engine.hpp  external-services.cpp  external-services.hpp  main.cpp  main.hpp  memory-debug.cpp  memory-debug.hpp  services.cpp  services.hpp  template-1-0.hpp
src/cpp/ecs/: entity.cpp  entity.hpp
src/cpp/ecs/components/: components.hpp
src/cpp/external-services/: external-render.cpp  external-render.hpp  external-services.cpp  external-services.hpp  input-messages.hpp  output-messages.hpp
src/cpp/services/: camera-manager.cpp  camera-manager.hpp  input-manager.cpp  input-manager.hpp  physics-manager.cpp  physics-manager.hpp  player-input-manager.cpp  player-input-manager.hpp  services.cpp  services.hpp  world-manager.cpp  world-manager.hpp
src/cpp/surface-generation/biomes/: aquifer.cpp  aquifer.hpp  biome-default-features.hpp  biome-generation-settings.cpp  biome-generation-settings.hpp  biome-manager.cpp  biome-manager.hpp  biome-source.cpp  biome-source.hpp  biomes.cpp  biomes.hpp  blocks.hpp  carvers.cpp  carvers.fwd.hpp  carvers.hpp  chunk-generator.cpp  chunk-generator.fwd.hpp  chunk-generator.hpp  chunk-status.cpp  chunk-status.fwd.hpp  chunk-status.hpp  chunks.cpp  chunks.fwd.hpp  chunks.hpp  climate.cpp  climate.hpp  cubic-spline.cpp  cubic-spline.hpp  features.hpp  heightmap.cpp  heightmap.fwd.hpp  heightmap.hpp  mob-spawner-settings.hpp  mth.cpp  mth.hpp  noise-chunk.cpp  noise-chunk.fwd.hpp  noise-chunk.hpp  noise-data.cpp  (+27 more)
src/cpp/test/: template-1-0-noise.hpp  template-8-24-noise.hpp  template-8-24-surface.hpp  template-8-26-carvers.hpp  template-8-26-surface.hpp  test.cpp  test.hpp
src/cpp/utils/: memory-debug.cpp  transform.hpp
src/entities/: entity.ts  object.ts
src/managers/: animation-processor.ts  gameloop.ts  input-manager.ts  loaders.ts  map-loader.ts  physics.ts  render.ts  resource-manager.ts  services-class.ts  services.ts  world.ts
src/models/: bone.ts  collision-model.ts  collision-primitives.ts  model-def.ts  model.ts  physics-def.ts  skin.ts
src/models/templates/: capsule-def.ts  minecraft-voxel-model-def.ts  simple-model-def.ts
src/shaders/: colored.frag  objects.frag  objects.vert
src/surface-generation/biomes/: aquifer.ts  biome-source.ts  blocks.ts  chunk-generator.ts  chunk-status.ts  chunks.ts  climate.ts  consumer.ts  cubic-spline.ts  heightmap.ts  level.ts  mth.ts  noise-data.ts  noise.ts  overworld-biome-builder.ts  pos.ts  random.ts  surface-rules.ts  surface-system.ts  terrain-shaper.ts  test-template.ts  test.ts
src/ts/: browser-main.ts  cpp-bridge.ts  engine-bridge.ts  index.ts  lib.js  test.ts  wgsl.d.ts
src/ts/components/: collisionComponent.ts  skinComponent.ts  textureComponent.ts
src/ts/engine-bridge/: module.ts  queue-messages.ts  queues.ts  read-write-utils.ts
src/ts/external-services/: game-loop.ts  input-manager.ts  render.ts  resource-manager.ts  services.ts
src/ts/managers/: gameloop.ts  input-manager.ts  world.ts
src/ts/models/: bone.ts  collision-primitives.ts  debug-line.ts
src/ts/shaders/: blank.frag  blank.frag.wgsl  blank.vert  blank.vert.wgsl  colored.vert  contact-shadows.frag.wgsl  debug-frustum.frag.wgsl  debug-frustum.vert.wgsl  downsample-16-extract-diff.frag.wgsl  downsample-16.frag.wgsl  downsample-4-extract-brightness.frag.wgsl  downsample-4.frag.wgsl  fog.frag  fog.frag.wgsl  general.frag  general.vert  glare.frag  glare.frag.wgsl  glare.vert  glare.vert.wgsl  objects-depth-buffer.vert.wgsl  objects-shadow-far.vert.wgsl  objects-shadow-near.vert.wgsl  objects.frag  objects.frag.wgsl  objects.vert  objects.vert.wgsl  passthrough-depth.frag.wgsl  passthrough-tex.frag.wgsl  passthrough.frag  passthrough.frag.wgsl  passthrough.vert  passthrough.vert.wgsl  passthrough_debug.frag.wgsl  skinning.frag.wgsl  skinning.vert  skydome.frag  skydome.frag.wgsl  skydome.vert  skydome.vert.wgsl  (+12 more)
src/ts/utils/: random-utils.ts
src/utils/: render-utils.ts
src/wasm/: cpp.d.ts  cpp.js  cpp.wasm  cpp.ww.js  engine - Copy (2).js  engine - Copy.js  engine.d.ts  engine.js  engine.wasm  wasm.d.ts
(+47 files in other folders)
